--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "materialize-css": "^1.0.0",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-websocket": "^0.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
